src/objects/Task_Email_Status_Date__c.object
<CustomObject>
    <description>Helper object for each Task to track the most recent action date (email sent or last open date) for the &quot;Automate HTML Email Status Tracking&quot; solution by Doug Ayers, https://douglascayers.com.</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The most recent action date for the HTML Email sent related to this task. Task trigger and batchable apex update this value. Will be the more recent of the Sent Date or Last Open Date. Used in batchable apex to narrow down which Tasks to track their HTML Email Status, such as emails sent or opened in the last 30 days.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Task whose HTML Email Status we are tracking. Auto created by Task trigger.</description>
        <externalId>true</externalId>
        <label>Task ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Who_ID__c</fullName>
        <description>The Contact or Lead of the Task whose HTML Email Status we are tracking. Auto created by Task trigger.</description>
        <label>Who ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Task Email Status Date</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Email Status Dates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>